<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/calendarButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/calendar" />

            </LinearLayout>

            <LinearLayout
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/exitButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="25dp"
                    android:background="@drawable/exiticonpngclose" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/dateText"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ProgressBar
                android:id="@+id/calorieProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="false"
                android:max="0"
                android:progress="0"
                android:scaleY="3" />

            <TextView
                android:id="@+id/caloriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/caloriesText"
                android:textSize="25sp"
                android:layout_margin="30dp"/>

            <TextView
                android:id="@+id/calorieCount"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="90dp"
                android:text="@string/calorieCountText"
                android:textSize="20sp" />

        </FrameLayout>

        <Button
            android:id="@+id/editTargetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTargetButtonText"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/captureFoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captureFoodButtonText"
            app:backgroundTint="@null"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:background="@drawable/rainbow_background"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/viewItemsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewItemsButtonText"
            app:backgroundTint="@null"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:background="@drawable/rainbow_background"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>